--- a/classes/static/css/toolbar.css
+++ b/classes/static/css/toolbar.css
@@ -1,13 +1,25 @@
-#autoptimize-loader-toolbar
+.autoptimize-loading
 {
 	display: none;
-	background: rgba(255, 255, 255, .7) url('loading.gif') no-repeat center;
 	position: fixed;
+	background-color: rgba(102, 102, 102, 0.9);
+	background-image: url('loading.gif');
+	background-position: center;
+	background-repeat: no-repeat;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 9998;
+	z-index: 9000000000;
+}
+
+.ZebraDialogOverlay
+{
+	z-index: 9000000000 !important;
+}
+.ZebraDialog
+{
+	z-index: 9000000001 !important;
 }
 
 #wp-admin-bar-autoptimize .white
@@ -37,7 +49,7 @@
 
 #wp-admin-bar-autoptimize-delete-cache .ab-item
 {
-	cursor: pointer !important;EC9103
+	cursor: pointer !important;
 	background: #464b50;
 }
 
